# raptor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  introduction.md
docs/src/concepts/: architecture.md  domain-model.md  update-lifecycle.md
docs/src/getting-started/: configuration.md  first-deployment.md  installation.md
docs/src/guides/: actions.md  authentication.md  confirmation-flow.md  distribution-sets.md  fiql.md  modules-artifacts.md  rollouts.md  systemd.md  target-filters.md  targets.md  web-console.md
docs/src/intro/: compatibility.md  quick-start.md  what-is-raptor.md
docs/src/reference/: cli.md  configuration.md  ddi-api.md  errors.md  management-api.md
docs/superpowers/plans/: 2026-07-04-raptor-v1.md  2026-07-05-raptor-ui.md
docs/superpowers/specs/: 2026-07-04-raptor-v1-design.md  2026-07-05-raptor-ui-design.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260704_000001_initial.rs  m20260712_000001_rollout.rs  m20260720_000001_target_filter.rs  m20260721_000001_confirmation.rs  m20260722_000001_ds_invalidate.rs  m20260723_000001_metadata.rs  m20260723_000001_types_crud.rs
packaging/: config.toml  raptor.service
raptor/: Cargo.toml  build.rs  test_sea.rs
raptor-api-types/: Cargo.toml
raptor-api-types/src/: lib.rs
raptor-ui/: Cargo.toml  Dioxus.toml  tailwind.css
raptor-ui/assets/: tailwind.css
raptor-ui/src/: api.rs  logic.rs  main.rs
raptor-ui/src/components/: badge.rs  confirm.rs  error_pane.rs  mod.rs  paginator.rs  search.rs  toast.rs
raptor-ui/src/components/ui/: button.rs  card.rs  dialog.rs  input.rs  mod.rs
raptor-ui/src/pages/: actions.rs  dashboard.rs  distributions.rs  ds_detail.rs  login.rs  mod.rs  module_detail.rs  modules.rs  rollout_detail.rs  rollouts.rs  shell.rs  stub.rs  target_detail.rs  targets.rs
raptor/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  state.rs  storage.rs  telemetry.rs  ui.rs  util.rs
raptor/src/api/: mod.rs  paging.rs
raptor/src/api/ddi/: artifacts.rs  config_data.rs  confirmation.rs  deployment.rs  feedback.rs  mod.rs  root.rs
raptor/src/api/mgmt/: actions.rs  artifacts.rs  distribution_sets.rs  dto.rs  login.rs  metadata.rs  mod.rs  rollouts.rs  software_modules.rs  system.rs  target_filters.rs  targets.rs  types.rs
raptor/src/auth/: ddi.rs  mgmt.rs  mod.rs  session.rs
raptor/src/domain/: deployment.rs  mod.rs  rollout.rs  target_filter.rs
raptor/src/entity/: action.rs  action_status.rs  action_status_message.rs  artifact.rs  distribution_set.rs  distribution_set_type.rs  ds_metadata.rs  ds_module.rs  ds_type_module.rs  mod.rs  rollout.rs  rollout_group.rs  rollout_target_group.rs  sm_metadata.rs  software_module.rs  software_module_type.rs  target.rs  target_attribute.rs  target_filter.rs  target_metadata.rs  target_type.rs  target_type_ds_type.rs
raptor/src/fiql/: compile.rs  mod.rs  parse.rs
raptor/tests/: ddi_auth.rs  ddi_confirmation.rs  ddi_deployment.rs  ddi_download.rs  ddi_feedback.rs  ddi_root.rs  e2e.rs  health.rs  mgmt_artifacts.rs  mgmt_assignment.rs  mgmt_auth.rs  mgmt_distribution_sets.rs  mgmt_ds_invalidate.rs  mgmt_login.rs  mgmt_metadata.rs  mgmt_rollouts.rs  mgmt_session_auth.rs  mgmt_software_modules.rs  mgmt_system.rs  mgmt_target_filters.rs  mgmt_targets.rs  mgmt_types.rs  migrations.rs  telemetry.rs  ui_serving.rs
raptor/tests/common/: mod.rs
