[package]
name = "raptor-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "=0.7.9", features = ["web", "router"] }
raptor-api-types = { path = "../raptor-api-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
futures = "0.3"
gloo-timers = { version = "0.4", features = ["futures"] }
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Location", "XmlHttpRequest", "XmlHttpRequestUpload",
    "ProgressEvent", "FormData", "Blob",
] }
