[package]
name = "raptor"
version = "0.1.0"
edition = "2021"
description = "A hawkBit-compatible OTA update server in Rust"
license = "MIT"
repository = "https://github.com/rosterloh/raptor"

[features]
embed-ui = ["dep:rust-embed", "dep:mime_guess"]
# OpenTelemetry (OTLP) export of traces, metrics and logs. Opt-in: default
# builds pull none of the OTel tree and behave exactly as before. See the
# `[otel]` config section and README "Observability".
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-appender-tracing",
    "dep:tonic",
]

# --- Debian packaging (cargo-deb) ---
# Build with: cargo deb -p raptor  (see .github/workflows/release.yml)
[package.metadata.deb]
name = "raptor"
maintainer = "Richard Osterloh <richard.osterloh@gmail.com>"
license-file = ["../LICENSE", "0"]
extended-description = """\
raptor is a lightweight, hawkBit-compatible over-the-air (OTA) update server. \
It speaks hawkBit's DDI v1 API (SWUpdate, RAUC hawkbit-updater and other \
clients work unchanged) and the core Management API, and ships an embedded web \
console. One binary, one config file."""
section = "net"
priority = "optional"
# Ship the embedded web console and OTLP telemetry export in the packaged
# binary, so operators can enable observability via the `[otel]` config section
# without rebuilding. Both stay dormant until configured.
features = ["embed-ui", "otel"]
default-features = false
assets = [
    ["target/release/raptor", "usr/bin/", "755"],
    # 0644: readable by the service's DynamicUser. Plaintext secrets belong in
    # the root-only /etc/raptor/raptor.env (see the unit's EnvironmentFile).
    ["../packaging/config.toml", "etc/raptor/config.toml", "644"],
    ["../README.md", "usr/share/doc/raptor/README.md", "644"],
]
conf-files = ["/etc/raptor/config.toml"]
# Minimal postinst/prerm/postrm carrying the #DEBHELPER# token; cargo-deb injects
# the systemd enable/start/stop snippets there.
maintainer-scripts = "../packaging/maintainer"

# systemd unit lives at packaging/raptor.service (workspace root). cargo-deb
# installs it and injects the enable/disable logic into the maintainer scripts
# above. The service uses DynamicUser + StateDirectory=raptor, so /var/lib/raptor
# is created and owned at runtime — no postinst useradd/chown needed.
[package.metadata.deb.systemd-units]
unit-scripts = "../packaging"
enable = true
# Do not auto-start on install: the shipped config has a placeholder password
# hash and DDI auth enabled, so an operator must edit /etc/raptor/config.toml
# and run `systemctl start raptor` first.
start = false

[dependencies]
raptor-api-types = { path = "../raptor-api-types" }
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "limit"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "../migration" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env", "test"] }
winnow = "1"
sha1 = "0.11"
sha2 = "0.11"
md-5 = "0.11"
hex = "0.4"
argon2 = "0.5"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
base64 = "0.22"
tempfile = "3"
futures = "0.3"
bytes = "1"
rust-embed = { version = "8", optional = true, features = ["interpolate-folder-path", "mime-guess"] }
mime_guess = { version = "2", optional = true }
# --- OpenTelemetry (optional, `otel` feature). Versions are pinned together:
# this ecosystem ships coupled breaking releases, so bump them as a set. ---
opentelemetry = { version = "0.32", optional = true, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32", optional = true, features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.32", optional = true, default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-blocking-client", "trace", "metrics", "logs", "tls-webpki-roots"] }
opentelemetry-semantic-conventions = { version = "0.32", optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
opentelemetry-appender-tracing = { version = "0.32", optional = true }
tonic = { version = "0.14", optional = true, default-features = false }

[dev-dependencies]
http-body-util = "0.1"
hawkbit = "0.7"
reqwest = { version = "0.13", features = ["json", "multipart"] }
